Add input parameters.
