# src/PlagiarismChecker.Core/Common/Services/Models/DocumentComparisonResult.cs
@@ -6,11 +6,13 @@ public sealed class DocumentComparisonResult
 {
     public required Document DocumentL { get; init; }
     public required Document DocumentR { get; init; }
-    public required int MatchingWordsPerfect { get; init; }
-    public required int MatchingWordsTotalL { get; init; }
-    public required int MatchingWordsTotalR { get; init; }
-    public required decimal MatchingPercentL { get; init; }
-    public required decimal MatchingPercentR { get; init; }
-    public required IReadOnlyList<WordMarker> WordMarkersL { get; init; }
-    public required IReadOnlyList<WordMarker> WordMarkersR { get; init; }
+    public required int PerfectMatch { get; init; }
+    public required decimal PerfectMatchPercentLeft { get; init; }
+    public required decimal PerfectMatchPercentRight { get; init; }
+    public required int OverallMatchCountLeft { get; init; }
+    public required int OverallMatchCountRight { get; init; }
+    public required decimal OverallMatchPercentLeft { get; init; }
+    public required decimal OverallMatchPercentRight { get; init; }
+    public required IReadOnlyList<WordMarker> WordMarkersLeft { get; init; }
+    public required IReadOnlyList<WordMarker> WordMarkersRight { get; init; }
 }
